--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,10 @@
   </div>
   <script src="{% static 'base/js/jquery.min.js' %}"></script>
   <script src="{% static 'base/js/bootstrap.min.js' %}"></script>
+
+  {% block js %}
+
+  {% endblock %}
 </div>
 </body>
 </html>
